@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.17.18
+Version: 1.17.19
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
@@ -13,7 +13,7 @@ Depends: R (>= 3.5.0)
 License: Artistic-2.0
 LazyData: true
 VignetteBuilder: knitr
-Imports: biocViews (>= 1.33.7), BiocInstaller, stringdist, graph, httr, tools,
+Imports: biocViews (>= 1.33.7), BiocManager, stringdist, graph, httr, tools,
 	 optparse, codetools, methods, utils, knitr
 Suggests: RUnit, BiocGenerics, Biobase, RJSONIO, rmarkdown, devtools (>= 1.4.1)
 Enhances: codetoolsBioC
